k8s/access-verifier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-verifier
  namespace: default
spec:
  selector:
    app: access-verifier
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
